Project

General

Profile

Actions

Bug #38030

closed

rgw: es: cannot query by content_type

Added by Yehuda Sadeh about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Problem is that internally it generates a query to meta.contenttype, while the attribute is kept as meta.content_type.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #38191: mimic: rgw: es: cannot query by content_typeResolvedYehuda SadehActions
Copied to rgw - Backport #38696: luminous: rgw: es: cannot query by content_typeResolvedYehuda SadehActions
Actions #1

Updated by Yehuda Sadeh about 5 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38191: mimic: rgw: es: cannot query by content_type added
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Backport changed from mimic to mimic luminous
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38696: luminous: rgw: es: cannot query by content_type added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF