rgw: es: fix content_type queries

Fixes: http://tracker.ceph.com/issues/38030

ES attribute is stored as content_type, while we were searching
for contenttype.

Allow searching by contenttype, content_type, and also lastmodified,
and last_modified.

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>